--- a/index.html
+++ b/index.html
@@ -12,19 +12,51 @@
 
         <form id="prediction-form">
             <label for="month">Month:</label>
-            <input type="number" id="month" name="month" min="1" max="12" required>
+            <select id="month" name="month" required>
+                <option value="1">January</option>
+                <option value="2">February</option>
+                <option value="3">March</option>
+                <option value="4">April</option>
+                <option value="5">May</option>
+                <option value="6" selected>June</option>
+                <option value="7">July</option>
+                <option value="8">August</option>
+                <option value="9">September</option>
+                <option value="10">October</option>
+                <option value="11">November</option>
+                <option value="12">December</option>
+            </select>
 
             <label for="year">Year:</label>
-            <input type="number" id="year" name="year" required>
-
-            <label for="shop_id">Shop ID:</label>
-            <input type="number" id="shop_id" name="shop_id" required>
+            <select id="year" name="year" required>
+                <option value="2016">2016</option>
+                <option value="2017">2017</option>
+                <option value="2018">2018</option>
+                <option value="2019">2019</option>
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+                <option value="2022">2022</option>
+                <option value="2023">2023</option>
+                <option value="2024" selected>2024</option>
+                <option value="2025">2025</option>
+            </select>
 
             <button type="submit">Predict Sales</button>
         </form>
 
         <div id="result">
-            <h2>Prediction Results</h2>
+            <h2>Top 5 Shops by Predicted Sales</h2>
+            <div id="table-container">
+                <table id="results-table">
+                    <thead>
+                        <tr>
+                            <th>Shop ID</th>
+                            <th>Predicted Sales</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
             <img id="chart" alt="Sales Chart" />
         </div>
     </div>
