--- a/index.html
+++ b/index.html
@@ -4,63 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sales Prediction</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="/static/style.css"> <!-- Link to external CSS file -->
 </head>
 <body>
-    <div class="container">
-        <h1>Sales Prediction</h1>
 
-        <form id="prediction-form">
-            <label for="month">Month:</label>
-            <select id="month" name="month" required>
-                <option value="1">January</option>
-                <option value="2">February</option>
-                <option value="3">March</option>
-                <option value="4">April</option>
-                <option value="5">May</option>
-                <option value="6" selected>June</option>
-                <option value="7">July</option>
-                <option value="8">August</option>
-                <option value="9">September</option>
-                <option value="10">October</option>
-                <option value="11">November</option>
-                <option value="12">December</option>
-            </select>
+    <h1>Sales Prediction</h1>
 
-            <label for="year">Year:</label>
-            <select id="year" name="year" required>
-                <option value="2016">2016</option>
-                <option value="2017">2017</option>
-                <option value="2018">2018</option>
-                <option value="2019">2019</option>
-                <option value="2020">2020</option>
-                <option value="2021">2021</option>
-                <option value="2022">2022</option>
-                <option value="2023">2023</option>
-                <option value="2024" selected>2024</option>
-                <option value="2025">2025</option>
-            </select>
+    <!-- Prediction Form -->
+    <form id="prediction-form">
+        <label for="year">Select Year:</label>
+        <select id="year" name="year" required>
+            <option value="2023">2023</option>
+            <option value="2024">2024</option>
+            <option value="2025">2025</option>
+        </select>
 
-            <button type="submit">Predict Sales</button>
-        </form>
+        <label for="shop">Select Shop:</label>
+        <select id="shop" name="shop_id" required>
+            <option value="0">Shop 0</option>
+            <option value="1">Shop 1</option>
+            <option value="2">Shop 2</option>
+            <option value="3">Shop 3</option>
+            <option value="4">Shop 4</option>
+        </select>
 
-        <div id="result">
-            <h2>Top 5 Shops by Predicted Sales</h2>
-            <div id="table-container">
-                <table id="results-table">
-                    <thead>
-                        <tr>
-                            <th>Shop ID</th>
-                            <th>Predicted Sales</th>
-                        </tr>
-                    </thead>
-                    <tbody></tbody>
-                </table>
-            </div>
-            <img id="chart" alt="Sales Chart" />
+        <button type="submit">Predict Sales</button>
+    </form>
+
+    <!-- Display the result -->
+    <div id="result">
+        <h2>Sales Prediction Results</h2>
+        <div id="chart-container">
+            <img id="sales-chart" src="" alt="Sales Chart" style="display: none;">
+        </div>
+        <div id="table-container">
+            <!-- Table will be dynamically generated here -->
         </div>
     </div>
 
-    <script src="static/app.js"></script>
+    <script src="/static/app.js"></script> <!-- Link to external JavaScript file -->
 </body>
 </html>
